# robotics-2018

./: .gitignore  .ycm_extra_conf.py  LICENSE.txt  README.md
core/: InterpreterModule.cpp  InterpreterModule.h  Module.cpp  Module.h  MotionCore.cpp  MotionCore.h  VisionCore.cpp  VisionCore.h
core/audio/: AudioModule.cpp  AudioModule.h
core/behavior/: BehaviorModule.cpp  BehaviorModule.h  Logging.h
core/common/: BehaviorStruct.h  BinarySerializable.cpp  BinarySerializable.h  Bits.h  Calibration.h  Camera.cpp  Camera.h  CameraParams.h  CoachPacket.cpp  CoachPacket.h  ColorConversion.cpp  ColorConversion.h  ColorSpaces.h  CommStruct.cpp  CommStruct.h  Concepts.h  CoreException.cpp  CoreException.h  Enum.cpp  Enum.h  ExponentialFilter.h  Field.cpp  Field.h  FieldConfiguration.cpp  FieldConfiguration.h  File.cpp  File.h  GameConfiguration.cpp  GameConfiguration.h  ImageBuffer.cpp  ImageBuffer.h  ImageParams.cpp  ImageParams.h  InterfaceInfo.cpp  InterfaceInfo.h  Iterator.h  Keyframe.cpp  Keyframe.h  Kicks.h  LocStruct.cpp  (+54 more)
core/communications/: CommInfo.cpp  CommInfo.h  CommunicationModule.cpp  CommunicationModule.h  Logging.h  PacketConverter.cpp  PacketConverter.h  RoboCupGameControlData.h  SPLCoachMessage.h  StreamingMessage.cpp  StreamingMessage.h  TCPConnection.cpp  TCPConnection.h  ThreadedUDPSocket.cpp  ThreadedUDPSocket.h  UDPWrapper.cpp  UDPWrapper.h
core/imageCapture/: BottomCamera.cpp  BottomCamera.h  DummyCamera.h  ImageCapture.cpp  ImageCapture.h  NaoCamera.cpp  NaoCamera.h  TopCamera.cpp  (+2 more)
core/motion/rswalk2014/: ActionGenerator.cpp  ActionGenerator.hpp  BodyModel.cpp  BodyModel.hpp  CMakeLists.txt  ClippedGenerator.cpp  ClippedGenerator.hpp  DeadGenerator.cpp  DeadGenerator.hpp  DistributedGenerator.cpp  DistributedGenerator.hpp  Generator.hpp  GyroConfig.cpp  GyroConfig.h  HeadGenerator.cpp  HeadGenerator.hpp  NullGenerator.cpp  NullGenerator.hpp  PendulumModel.cpp  PendulumModel.hpp  RSWalkModule2014.cpp  RSWalkModule2014.h  RefPickupGenerator.cpp  RefPickupGenerator.hpp  StandGenerator.cpp  StandGenerator.hpp  Walk2014Generator.cpp  Walk2014Generator.hpp  WalkEnginePreProcessor.cpp  WalkEnginePreProcessor.hpp  WalkToDo.txt  gyroCalRobot.txt  runswift.cmake
core/motion/rswalk2014/perception/kinematics/: CKF.cpp  Kinematics.cpp  Kinematics.hpp
core/motion/rswalk2014/perception/vision/: RSCamera.cpp  RSCamera.hpp
core/motion/rswalk2014/types/: ActionCommand.hpp  JointValues.hpp  Point.hpp  RRCoord.hpp  SensorValues.hpp
core/motion/rswalk2014/utils/: SPLDefs.hpp  basic_maths.hpp  basic_onullstream.hpp  body.hpp
data/: .gitignore  ballfit.py  ballfit.txt  calibration.92  calibration.93  calibration.94  calibration.97  calibration.98  calibration.99  current  fft_whistle_model.txt  goalfit.py  goalfit.txt  ipList.txt  ip_list.txt  moduleList.txt
documentation/: branches.md  class_setup.md  codebase_tutorial.md  general_setup.md  simulation.md
install/: .gitattributes  .gitignore  bashrc_addendum  common.py  common.sh  install  install_caffe  install_data  install_fft  install_game_controller  install_lfs  install_libs  install_local_scripts  install_naoqi  install_python  install_qt  lab_setup  machine_install  machine_install_caffe  machine_install_libs  machine_install_naoqi  pre-install.sh  script_setup.sh  script_wireless.sh  setup_robot  update_robot  vars
lib/: .gitignore
lib/yuview/: .gitignore  CMakeLists.txt  compile  libyuview.ax64  yuview
lib/yuview/include/: ArgumentParser.h  Common.h  FileNavigator.h  Util.h  YUVFile.h  YUVImage.h  YUYV.h
lib/yuview/install/: install  notes  x-yuv.xml  yuv.thumbnailer  yuview.desktop
lib/yuview/schema/: YUVFile.fbs
lib/yuview/src/: ArgumentParser.cpp  Common.cpp  FileNavigator.cpp  Util.cpp  YUVImage.cpp  YUYV.cpp  main.cpp
tools/: plotCOM.py  testStep.py  testStepSide.py
(+524 files in other folders)
